# one-task-to-go

./: 1T2G.icns  LICENSE  README.md  build.sh  make_icons.sh  menubar_app.py  menubar_dataclasses.py  menubar_repo.py  pyproject.toml  setup.py
